--- a/functions/package.json
+++ b/functions/package.json
@@ -13,11 +13,9 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
-  },
-  "devDependencies": {
-    "firebase-functions-test": "^3.1.0"
+    "firebase-admin": "^11.11.1",
+    "firebase-functions": "^4.5.0",
+    "openai": "^4.24.1"
   },
   "private": true
 }
