--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,6 @@ jobs:
         uses: actions/setup-node@v3.3.0
 
       - run: sudo npm install -g firebase-tools
-      - run: echo '{"hosting":[{"target":"sapientclinician", "public":"public","ignore":["firebase.json"]}]}' > firebase.json
-      - run: firebase deploy --only hosting:sapientclinician --project sapientclinician --token $FIREBASE_TOKEN
+      - run: firebase deploy --only hosting --project sapientclinician --token $FIREBASE_TOKEN
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
